examples/datalog/09_recursion/41_level_tracking.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_level_track
Knowledge graph 'test_level_track' created.
Switched to knowledge graph: test_level_track
> .kg use test_level_track
Switched to knowledge graph: test_level_track
> +edge[("root", "a"), ("root", "b"), ("a", "c"), ("a", "d"), ("c", "e")].
Inserted 5 fact(s) into 'edge'.
> +level("root", 0).
Inserted 1 fact(s) into 'level'.
> +level(Child, Depth) :- level(Parent, D), edge(Parent, Child), Depth = D + 1.
Script error: Failed to register rule: Unsafe rule 'level': Head variable(s) Depth not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
